Display spinner while obtaining latest transactions.

--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -30,7 +30,8 @@
               </button>
             </div>
           </div>
-          <table>
+          <mat-spinner *ngIf="!transactions"></mat-spinner>
+          <table *ngIf="transactions">
             <thead>
             <tr>
               <th>{{'DASHBOARD_STATE_LOWDATA_TRANSACTIONS_STATUS' | translate}}</th>
