--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -35,6 +35,6 @@
 
     <top-subscriptions></top-subscriptions>
 
-    <funnel-graph [renderChart]="renderCharts"></funnel-graph>
+    <funnel-graph [renderChart]="renderCharts" [showFunnelTable]="showFunnelTable"></funnel-graph>
   </div>
 </div>
