--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -68,7 +68,7 @@
     </mat-tab>
 
     <mat-tab class="agreements">
-      <agreements></agreements>
+      <agreements [accountId]="entity.id"></agreements>
     </mat-tab>
   </mat-tab-group>
 </div>
