--- a/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
+++ b/src/app/pages/accounts-page/account-view/agreements/agreements.component.scss
@@ -12,6 +12,7 @@
       color: #202124;
       font-weight: 500;
       font-size: 18px;
+      margin-top: 10px;
     }
 
     .revised-date {
@@ -20,32 +21,46 @@
       font-size: 13px;
       line-height: 22px;
       margin-left: 20px;
+      margin-top: 10px;
     }
 
-    button {
+    .buttons {
+      margin-left: auto;
+      margin-right: -16px;
+    }
+
+    .view {
       text-transform: uppercase;
       color: #2c98f0;
       font-weight: 500;
       font-size: 14px;
-      margin-left: auto;
-      margin-right: -16px;
-      margin-top: -10px;
+      //margin-left: auto;
+      //margin-right: -16px;
+    }
+
+    .download {
+      text-transform: uppercase;
+      color: #2c98f0;
+      font-weight: 500;
+      font-size: 14px;
+      //margin-left: auto;
+      //margin-right: -16px;
     }
   }
 
   .line {
-    margin: 0 auto;
+    margin: 15px 0 15px 0;
     height: 1px;
     width: 640px;
     background: rgba(0, 0, 0, 0.12);
   }
 
-  div:first-child {
-    margin-bottom: 13px;
-  }
-
-  div:last-child {
-    margin-top: 25px;
-  }
+  //div:first-child {
+  //  margin-bottom: 13px;
+  //}
+  //
+  //div:last-child {
+  //  margin-top: 25px;
+  //}
 }
 
