--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.scss
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.scss
@@ -3,44 +3,35 @@
   margin: 25px;
 
   .option {
-    display: flex;
-    align-items: center;
     padding: 15px;
-    width: calc(50% - 10px);
+    max-width: 100%;
+    width: 550px;
     background: #8ED8FD;
     border-radius: 4px;
-  }
 
-  .payment {
-    margin-right: 10px;
-
-    div {
+    .title {
+      display: flex;
+      align-items: center;
       font-size: 20px;
       font-weight: 500;
+
+      button {
+        margin-left: auto;
+        color: #2C98F0;
+      }
     }
 
-    button {
-      margin-left: auto;
-      color: #2C98F0;
-    }
-  }
-
-  .upgrade {
-    margin-left: 10px;
-    color: #4277C2;
-
-    div {
-      font-size: 20px;
-      max-width: 250px;
-    }
-
-    button {
-      margin-left: auto;
-      padding: 24px 30px;
-      background: #1EBEA5;
-      border-radius: 2px;
-      color: #ffffff;
+    .details {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 12px;
+      margin-right: 15px;
       font-size: 16px;
+
+      img {
+        height: 35px;
+      }
     }
   }
 }
