--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
@@ -6,9 +6,9 @@
 
 <div class="account-management-body">
 
-  <div class="column">
+  <div class="row">
 
-    <div class="card" *ngIf="accountBackup">
+    <div class="card column" *ngIf="accountBackup">
       <div class="title">Account Name</div>
       <div class="body">
         <mat-input-container>
@@ -24,50 +24,101 @@
         <button mat-button
                 [disabled]="accountBackup.name === account.name"
                 [class.button-disabled]="accountBackup.name === account.name"
+                (click)="updateAccount()">
+          Save
+        </button>
+      </div>
+    </div>
+
+    <div *ngIf="session" class="card column">
+      <div class="title">
+        Current Payment Option
+
+        <div class="change" *ngIf="session.customer.creditCards.length > 0" (click)="openCardSwitcher()">CHANGE</div>
+      </div>
+
+      <ng-container *ngIf="defaultCreditCard; else nocard">
+        <div class="explanation">This card is used for SIX subscription payments.</div>
+
+        <div class="credit-card credit-card--single">
+
+          <img *ngIf="defaultCreditCard.type !== 'OTHER'" src="{{'/assets/cards/' + (defaultCreditCard.type || '').toLowerCase() + '.svg'}}">
+
+          <div class="info">
+            <div class="number">**** **** **** {{defaultCreditCard.lastFour}}</div>
+            <div class="data">{{defaultCreditCard.name}}</div>
+            <div class="data">Expires {{defaultCreditCard.expiration}}</div>
+          </div>
+        </div>
+      </ng-container>
+
+      <ng-template #nocard>
+        <div class="no-card">
+          Please choose default credit card
+        </div>
+      </ng-template>
+    </div>
+
+  </div>
+
+  <div *ngIf="session" class="row">
+
+    <div class="card column" *ngIf="customer">
+      <div class="title">Contact Information</div>
+      <div class="body">
+        <mat-input-container [class.error]="formInvalid && !customer.firstName">
+          <input type="text" matInput placeholder="Name" [(ngModel)]="customer.firstName">
+        </mat-input-container>
+
+        <mat-input-container [class.error]="formInvalid && !validEmail()">
+          <input type="text" matInput placeholder="Email" [(ngModel)]="customer.email">
+        </mat-input-container>
+
+        <mat-input-container [class.error]="formInvalid && !customer.phone">
+          <input matInput type="text" [textMask]="{mask: mask, guide: false}" placeholder="Phone Number" [(ngModel)]="customer.phone">
+        </mat-input-container>
+      </div>
+      <div class="buttons">
+        <button mat-button
+                [disabled]="!customerEdited()"
+                (click)="cancelCustomerUpdate()">
+          Cancel
+        </button>
+        <button mat-button
+                [disabled]="!customerEdited()"
+                [class.button-disabled]="!customerEdited()"
                 (click)="updateCustomer()">
           Save
         </button>
       </div>
     </div>
 
-    <div *ngIf="session" class="card">
-      <div class="title">Contact Information</div>
-      <div class="body">
-        <mat-input-container>
-          <input type="text" readonly matInput placeholder="Name" value="{{session.customer.firstName}} {{session.customer.lastName}}">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input type="text" readonly matInput placeholder="Email" value="{{session.customer.email}}">
-        </mat-input-container>
-
-        <mat-input-container>
-          <input type="text" readonly matInput placeholder="Phone Number" value="{{session.customer.phone}}">
-        </mat-input-container>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="session" class="column">
-    <div class="card">
+    <div class="card column">
       <div class="title">Cards on file</div>
 
-      <div class="credit-card" *ngFor="let card of session.customer.creditCards">
+      <ng-container *ngIf="session.customer.creditCards.length > 0; else nocards">
+        <div class="credit-card" *ngFor="let card of session.customer.creditCards">
 
-        <img *ngIf="card.type !== 'OTHER'" src="{{'/assets/cards/' + (card.type || '').toLowerCase() + '.svg'}}">
+          <img *ngIf="card.type !== 'OTHER'" src="{{'/assets/cards/' + (card.type || '').toLowerCase() + '.svg'}}">
 
-        <div class="info">
-          <div class="number">**** **** **** {{card.lastFour}}</div>
-          <div class="data">{{card.name}}</div>
-          <div class="data">Expires {{card.expiration}}</div>
+          <div class="info">
+            <div class="number">**** **** **** {{card.lastFour}}</div>
+            <div class="data">{{card.name}}</div>
+            <div class="data">Expires {{card.expiration}}</div>
+          </div>
+
+          <div class="actions">
+            <mat-icon>delete</mat-icon>
+            <mat-icon>edit</mat-icon>
+          </div>
         </div>
+      </ng-container>
 
-        <div class="actions">
-          <mat-icon>delete</mat-icon>
-          <mat-icon>edit</mat-icon>
-        </div>
-      </div>
+      <ng-template #nocards>
+        <div class="no-card">No Cards found</div>
+      </ng-template>
     </div>
+
   </div>
 
 </div>
