--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -1,25 +1,40 @@
 .account-management-body {
-  display: flex;
   padding: 25px;
 
-  .column {
-    margin-right: 24px;
-    width: calc(33% - 24px);
+  .row {
+    display: flex;
   }
-
   .card {
     margin-bottom: 25px;
+    margin-right: 24px;
+    width: calc(33% - 24px);
     padding: 15px;
-    width: 100%;
     box-sizing: border-box;
     background: #ffffff;
     box-shadow: inset 0 0 2px rgba(0,0,0,0.12);
     border-radius: 4px;
 
+    .explanation {
+      font-size: 13px;
+      margin: 20px 0 25px;
+    }
+
     .title {
+      display: flex;
       color: #202124;
       font-size: 16px;
       font-weight: 500;
+
+      .change {
+        margin-left: auto;
+        color: #2C98F0;
+        cursor: pointer;
+      }
+    }
+
+    .no-card {
+      margin-top: 30px;
+      font-size: 14px;
     }
 
     .body {
@@ -58,6 +73,10 @@
   display: flex;
   align-items: center;
   margin: 20px 0;
+
+  &--single {
+    margin-bottom: 0 !important;
+  }
 
   img {
     height: 60px;
