--- a/src/app/pages/account-management-page/account-management-roles/account-management-role-view/account-management-role-view.component.scss
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-role-view/account-management-role-view.component.scss
@@ -2,7 +2,7 @@
   margin: 25px;
 
   &--general {
-    max-width: 300px;
+    max-width: 320px;
   }
 
   mat-input-container {
@@ -127,4 +127,205 @@
     margin-right: 12px;
     font-weight: 500;
   }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+
+  button {
+    background: #2C98F0;
+    margin-right: 24px;
+    color: white;
+  }
+
+  .count {
+    margin-left: auto;
+    color: #5F6368;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+
+.body--users {
+  display: flex;
+  padding: 20px 25px 0;
+
+  .users-editor {
+    width: 0;
+    height: calc(100vh - 240px);
+    overflow: hidden;
+    transition: all 250ms;
+
+    &--visible {
+      width: 320px;
+      transition: all 250ms;
+      border-right: 1px solid rgba(0, 0, 0, 0.12);
+      margin-right: 15px;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      padding-right: 15px;
+      height: 100%;
+      width: 320px;
+      box-sizing: border-box;
+
+      .title {
+        margin-bottom: 20px;
+        color: #4277C2;
+        font-size: 20px;
+      }
+
+      .subtitle {
+        margin-bottom: 15px;
+        color: rgba(0, 0, 0, 0.54);
+        font-size: 13px;
+      }
+
+      .mrw-bi-input {
+        width: 100%;
+      }
+
+      .items {
+        margin-top: 20px;
+
+        .item {
+          display: flex;
+          align-items: center;
+          padding: 10px 0;
+          border-top: 1px solid rgba(0,0,0,0.12);
+
+          mat-checkbox {
+            margin-right: 15px;
+          }
+
+          .details {
+            div {
+              font-size: 13px;
+              color: rgba(0, 0, 0, 0.54);
+
+              &:first-of-type {
+                font-weight: 500;
+                color: rgba(0, 0, 0, 0.87)
+              }
+            }
+          }
+
+        }
+      }
+    }
+  }
+
+  .grid-container {
+    width: 100%;
+    transition: all 250ms;
+
+    &--partial {
+      width: calc(100% - 320px);
+      transition: all 250ms;
+    }
+  }
+}
+
+.no-data {
+  margin-left: 12px;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 24px;
+  margin-left: -12px;
+  margin-right: -12px;
+
+  .user-card {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 24px;
+    margin-right: 12px;
+    margin-left: 12px;
+    width: calc(33% - 24px);
+    height: 200px;
+    padding: 18px;
+    box-sizing: border-box;
+    background: white;
+    border-radius: 4px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,0.12);
+
+    &--partial {
+      width: calc(50% - 24px) !important;
+    }
+
+    @media only screen and (max-width: 1200px) {
+      width: calc(50% - 24px);
+    }
+
+    @media only screen and (max-width: 600px) {
+      width: calc(100%);
+    }
+
+    .avatar {
+      font-size: 16px;
+      color: rgba(255, 255, 255, 0.87);
+      background: #2C98F0;
+      border-radius: 50%;
+      min-height: 38px;
+      min-width: 38px;
+      line-height: 38px;
+      text-align: center;
+    }
+
+    .data {
+      display: flex;
+      flex-direction: column;
+      margin-left: 18px;
+      height: 100%;
+      width: 100%;
+
+      .name {
+        color: rgba(0, 0, 0, 0.87);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+      }
+
+      .email {
+        font-size: 13px;
+        line-height: 24px;
+        color: rgba(0, 0, 0, 0.54);
+      }
+
+      .login {
+        margin-top: auto;
+        margin-bottom: 12px;
+        font-size: 13px;
+        line-height: 24px;
+        color: rgba(0, 0, 0, 0.54);
+        padding-bottom: 10px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12)
+      }
+    }
+
+    .menu-icon {
+      position: absolute;
+      top: 10px;
+      right: 5px;
+      color: rgba(0, 0, 0, 0.54);
+      height: 22px;
+      width: 22px;
+      font-size: 22px;
+      cursor: pointer;
+    }
+  }
+}
+
+.mrw-bi-input {
+  margin: 0;
+  color: #5F6368;
+  background-color: rgba(0, 0, 0, 0.12);
 }
