--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.html
@@ -25,28 +25,12 @@
         <div class="login">Last login:</div>
 
         <div class="roles">
-          <div class="roles__input" [matMenuTriggerFor]="rolesMenu">
-            <div>{{acl.role.name}}</div>
-            <mat-icon class="roles__input__arrow">keyboard_arrow_down</mat-icon>
-          </div>
-          <mat-menu #rolesMenu="matMenu" x-position="before">
-            <button class="menu-button" *ngFor="let sharedRole of sharedRoles" mat-menu-item (click)="updateAclRole(acl, sharedRole)">
-              <div class="check-container">
-                <mat-icon class="check-container__icon" *ngIf="sharedRole.id === acl.role.id">done</mat-icon>
-              </div>
-              <div>{{sharedRole.name}}</div>
-              <img src="/assets/images/logo-navigation-small.svg" alt="">
-            </button>
-
-            <div class="separator"></div>
-
-            <button class="menu-button" *ngFor="let role of roles" mat-menu-item (click)="updateAclRole(acl, role)">
-              <div class="check-container">
-                <mat-icon class="check-container__icon" *ngIf="role.id === acl.role.id">done</mat-icon>
-              </div>
-              <div>{{role.name}}</div>
-            </button>
-          </mat-menu>
+          <account-management-roles-selector
+            [acl]="acl"
+            [sharedRoles]="sharedRoles"
+            [roles]="roles"
+            (updateRole)="updateAclRole($event)">
+          </account-management-roles-selector>
         </div>
       </div>
 
