Show only one tos modal at a time

--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -37,7 +37,7 @@
   <terms-and-conditions [type]="'user'"></terms-and-conditions>
 </div>
 
-<div *ngIf="ownerAclOutdated" class="terms-and-conditions-container">
+<div *ngIf="!userAclOutdated && ownerAclOutdated" class="terms-and-conditions-container">
   <terms-and-conditions [type]="'owner'"></terms-and-conditions>
 </div>
 
