--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.scss
@@ -29,14 +29,11 @@
   margin-right: -12px;
 
   .role-card {
-    display: flex;
-    flex-direction: column;
     position: relative;
     margin-bottom: 24px;
     margin-right: 12px;
     margin-left: 12px;
     width: calc(33% - 24px);
-    height: 200px;
     box-sizing: border-box;
     background: white;
     border-radius: 4px;
@@ -48,6 +45,13 @@
 
     @media only screen and (max-width: 600px) {
       width: calc(100%);
+    }
+
+    .container {
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
     }
 
     .title {
