--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -19,7 +19,7 @@
 
       <div class="chart-container">
         <div class="funnel-graph">
-          <funnel-graph [renderChart]="renderChart" [simpleChart]="true" [showFunnelTable]="showFunnelTable"></funnel-graph>
+          <funnel-graph-simple *ngIf="renderChart" [simpleChart]="true"></funnel-graph-simple>
         </div>
         <div class="transactions">
           <div class="transactions-header">
