Enable adding/editing of accounts cards

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -11,7 +11,7 @@
   <div class="option">
     <div class="title">
       <div>Current Payment Option</div>
-      <button mat-button (click)="navigateToGeneral()">MANAGE PAYMENT OPTIONS</button>
+      <button mat-button (click)="openCardSwitcher()">MANAGE PAYMENT OPTIONS</button>
     </div>
 
     <div class="details">
