--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -5,6 +5,8 @@
     display: flex;
   }
   .card {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 25px;
     margin-right: 24px;
     width: calc(33% - 24px);
@@ -114,4 +116,10 @@
       color: rgba(0, 0, 0, 0.54);
     }
   }
+}
+
+.add-card-button {
+  margin-right: auto;
+  margin-top: auto;
+  border: 1px solid rgba(0,0,0,0.12);
 }
