--- a/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
+++ b/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
@@ -15,6 +15,15 @@
     </div>
 
     <div class="count" *ngIf="accessKeys">{{accessKeys.length}} Keys</div>
+
+    <div class="sort" [matMenuTriggerFor]="sortoptions">
+      <div>Sort by <span>{{selectedSortBy ? ' ' + selectedSortBy.label : ''}}</span></div>
+      <mat-icon>keyboard_arrow_down</mat-icon>
+    </div>
+
+    <mat-menu #sortoptions="matMenu" x-position="before">
+      <button mat-menu-item *ngFor="let sort of sortBy" (click)="applySortBy(sort)">{{sort.label}}</button>
+    </mat-menu>
   </div>
 
   <div class="content-wrapper" *ngIf="accessKeys">
