--- a/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
@@ -1,74 +1,123 @@
 .customer-service-container {
+  position: relative;
   display: flex;
   height: calc(100vh - 70px);
   padding: 15px;
   box-sizing: border-box;
-  background: #38639A;
+
+  .top-strip {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #3A69AB;
+    width: 100%;
+    height: 300px;
+  }
 
   .item {
     display: flex;
     margin: 10px;
-    width: 22%;
-    background: #3F6DAC;
-    cursor: pointer;
-    overflow: hidden;
-    transition: width 250ms ease-in-out;
+    width: 50%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.25);
 
     .content {
       position: relative;
       text-align: center;
-      margin: auto;
+      background: #FAFAFA;
+      width: 100%;
 
       .title {
-        font-size: 22px;
-        margin-bottom: 0;
-        transition: margin 250ms ease-in-out;
-        color: rgba(255,255,255,0.75);
+        padding: 30px 0;
+        background: #4277C2;
+        font-size: 30px;
+        color: #ffffff;
 
-        &--focused {
-          margin-bottom: 20px;
-          transition: margin 250ms ease-in-out;
-          color: white;
+        .icon-wrapper {
+          display: flex;
+          margin: auto auto 30px;
+          width: 115px;
+          height: 115px;
+          border-radius: 50%;
+          background: #3A69AB;
+
+          mat-icon {
+            margin: auto;
+            height: 72px;
+            width: 72px;
+            font-size: 72px;
+            color: #2C98F0;
+          }
         }
       }
 
-      mat-form-field {
-        width: 240px;
-        padding: 4px 10px 8px 10px;
-        box-sizing: border-box;
-        font-size: 12px;
-        background: white;
-        border-radius: 5px;
-        color: rgba(0,0,0,0.8);
-      }
+      .search {
+        margin-top: 20px;
 
-      .input-container {
-        height: 0;
-        width: 0;
-        overflow: hidden;
-        transition: height 250ms ease-in-out;
-      }
+        .mrw--search-input {
+          position: relative;
+          display: flex;
+          margin: auto;
+          padding: 5px 15px;
+          align-items: center;
+          width: 250px;
+          background: #EBEBEB;
+          border-radius: 4px;
 
-      .visible {
-        height: 45px;
-        width: 240px;
-        transition: height 250ms ease-in-out;
+          mat-form-field {
+            box-sizing: border-box;
+            width: 230px;
+            font-size: 16px;
+            background: #EBEBEB;
+            border-radius: 4px;
+            color: rgba(0, 0, 0, 0.87);
+          }
+
+          mat-icon {
+            color: rgba(0, 0, 0, 0.54);
+            height: 26px;
+            width: 26px;
+            font-size: 26px;
+          }
+
+          .autocomplete {
+            position: absolute;
+            top: 42px;
+            left: 0;
+            max-height: calc(100vh - 450px);
+            overflow: auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.33);
+            border-radius: 0 0 4px 4px;
+            border-top: 2px solid #1EB1FC;
+
+            .result {
+              padding: 12px;
+
+              .row {
+                font-size: 13px;
+                line-height: 24px;
+                color: rgba(0, 0, 0, 0.54);
+                text-align: left;
+
+                &:first-of-type {
+                  color: rgba(0, 0, 0, 0.87);
+                  font-weight: 500;
+                }
+
+                span {
+                  width: 50px;
+                }
+              }
+            }
+          }
+        }
+
       }
     }
-  }
-
-  .expanded {
-    width: 56%;
-    transition: width 250ms ease-in-out;
-  }
-
-  .focused {
-    background: #4478BE;
   }
 }
 
 .animation-wrapper {
-  min-height: calc(100vh - 70px);
+  height: 264px;
   min-width: 100%;
-  background: #4478BE;
+  background: #3A69AB;
 }
