--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div *ngIf="session" class="card column">
+    <div *ngIf="session && authService.hasPermissions('billing', 'read')" class="card column">
       <div class="title">
         Current Payment Option
 
@@ -61,7 +61,7 @@
 
   </div>
 
-  <div *ngIf="session" class="row">
+  <div *ngIf="session && authService.hasPermissions('billing', 'read')" class="row">
 
     <div class="card column" *ngIf="customer">
       <div class="title">Contact Information</div>
